fixed: horizontal scrolling at mobile size #15

--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -28,6 +28,17 @@
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.25);
   transition: none;
 
+  @media (max-width: 400px) {
+    min-width: 266px;
+    .datepicker--cell {
+      height: 32px;
+    }
+
+    .datepicker--nav {
+      padding-bottom: 20px;
+    }
+  }
+
   &__arrow {
     font-family: 'Material Icons';
     font-size: 24px;
