--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -66,6 +66,35 @@
     }
   }
 
+  &__filter-label {
+    display: none;
+    font-family: 'Font Awesome solid';
+    font-size: 24px;
+    line-height: 50px;
+    color: $textColor_75;
+
+    @media (max-width: 960px) {
+      display: block;
+      position: absolute;
+      right: 80px;
+    }
+
+    &::before {
+      content: '\f0b0';
+      text-align: center;
+      width: 50px;
+      height: 50px;
+      background: #ffffff;
+      box-shadow: 10px 0px 10px rgba(0, 0, 0, 0.05);
+      border-radius: 0 4px 4px 0;
+      cursor: pointer;
+
+      @media (max-width: 1280px) {
+        display: inline-block;
+      }
+    }
+  }
+
   &__menu-burger.header__menu-burger_active {
     position: fixed;
     top: 15px;
