--- a/src/pages/room-details-page/room-details-page.scss
+++ b/src/pages/room-details-page/room-details-page.scss
@@ -99,6 +99,7 @@
     }
 
     @media (max-width: 480px) {
+      max-width: 300px;
       padding: 0;
     }
   }
